Added Basic Auth in Swagger
